# unrelic

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
installer/: Package.wxs  generate-license-fragment.ps1  unrelic-context.ps1  unrelic.wixproj
src/: cli.rs  error.rs  ffmpeg.rs  lib.rs  main.rs  plan.rs  tools.rs
tests/: e2e.rs
